B-68612 Tech Debt: FDA: replace com.google.common.collect.ImmutableList.of() by java.util.List.of().