@@ -3,8 +3,6 @@ package com.copyright.rup.dist.foreign.repository.impl.csv.acl;
 import com.copyright.rup.dist.common.repository.impl.csv.BaseCsvReportHandler;
 import com.copyright.rup.dist.foreign.domain.report.UdmAssigneeStatusReportDto;
 
-import com.google.common.collect.ImmutableList;
-
 import java.io.OutputStream;
 import java.util.ArrayList;
 import java.util.List;
@@ -20,7 +18,7 @@ import java.util.List;
  */
 public class UdmAssigneesByStatusReportHandler extends BaseCsvReportHandler<UdmAssigneeStatusReportDto> {
 
-    private static final List<String> HEADERS = ImmutableList.of("Status", "Assignee", "Count");
+    private static final List<String> HEADERS = List.of("Status", "Assignee", "Count");
 
     /**
      * Constructor.
