@@ -3,8 +3,6 @@ package com.copyright.rup.dist.foreign.repository.impl.csv.acl;
 import com.copyright.rup.dist.common.repository.impl.csv.BaseCsvReportHandler;
 import com.copyright.rup.dist.foreign.domain.report.UdmVerifiedDetailsBySourceReportDto;
 
-import com.google.common.collect.ImmutableList;
-
 import java.io.OutputStream;
 import java.util.ArrayList;
 import java.util.List;
@@ -20,7 +18,7 @@ import java.util.List;
  */
 public class UdmVerifiedDetailsBySourceReportHandler extends BaseCsvReportHandler<UdmVerifiedDetailsBySourceReportDto> {
 
-    private static final List<String> HEADERS = ImmutableList.of("Det LC ID", "Det LC Name", "Agg LC ID", "Agg LC Name",
+    private static final List<String> HEADERS = List.of("Det LC ID", "Det LC Name", "Agg LC ID", "Agg LC Name",
         "Channel", "Usage Origin", "# of Details");
 
     /**
